tests/ui/resolve/resolve-conflict-type-vs-import.rs
use std::slice::Iter;

struct Iter;
//~^ ERROR the name `Iter` is defined multiple times

fn main() {
}
